Update the "love cat" post.

--- a/blog/2017-07-21-love-cat.markdown
+++ b/blog/2017-07-21-love-cat.markdown
@@ -2,17 +2,17 @@
 
 从小就喜欢猫，可惜由于母亲“凡是会拉屎的都不养”的政策，一直都没有机会自己养一只。所以邻居家的猫，对我来说都有一种难以抵抗的诱惑。我还记得小时候住平房，自己学了一声喵叫录到磁带里，然后用最大的音量放出来，结果邻居家的小白猫听见了，窜进我家的纱门，那种欣喜是难以言表的。然而别人家的猫毕竟只能是客人，这个恋猫情结就一直到了自己独立生活的时候，才有了进展。
 
-很多人对猫有误解，认为相对于狗而言，猫不忠诚，养不家，不认人。甚至认为猫很势利，你有吃的就对你好，没吃的就可以不理你，甚至出走。自己养猫之后，发现这些说法全都是误解。猫不但会认人，而且会思念自己喜欢的人。很多人盲目的认为忠诚是优点，而我觉得狗那种“无条件的忠诚”，其实是虚伪而危险的。狗往往对主人表现得很忠诚，而对其他人就凶神恶煞的。人们都说“狗仗人势”就是这个道理，狗的忠诚里面显露出来的其实是一个字：贱。
+很多人对猫有误解，认为相对于狗而言，猫不忠诚，养不家，不认人。甚至认为猫很势利，你有吃的就对你好，没吃的就可以不理你，甚至出走。自己养猫之后，发现这些说法全都是误解。猫不但会认人，而且会思念自己喜欢的人。很多人盲目的认为忠诚是优点，而我觉得狗那种“无条件的忠诚”，是比较虚伪的。狗往往对主人表现得很忠诚，而对其他人或者其它狗就凶神恶煞的。人们都说“狗仗人势”，就是这个道理，狗的忠诚里面显露出来的其实是“贱”。
 
 你能体会在监控摄像头里看到一只猫，用各种姿势躺在各种位置，望着家门口，盼着你回家的情形吗？出远门旅游的时候，我都会请宠物保姆或者朋友帮我喂猫，去陪陪它。住父母家的时候，父母也没有少照顾它，喂它好吃的零食。可是他们告诉我，我不在家的时候，它就躲在我的房间里不出来，或者趴在地板上望着门口。它的心里有一个人，它在等他回家。所以等到你回家的时候，它就会热情的欢迎你，偎依在你身旁。
 
-猫和狗的不同点在于，猫是森林之王老虎的兄弟。相对于狗，猫具有更强的独立生存能力。猫并不觉得自己需要依赖人而活着，所以它们不会刻意去取悦人。就像任何独立的人一样，猫只对那些爱自己，关心自己的人好。所以在某种程度上，猫一旦对人产生了感情，那就是真爱，不会伪装，也没有目的性。人们都喜欢骂势利小人是“哈巴狗”，骂卖国贼是“走狗”，有谁见过用猫的名字来骂人的？
+猫和狗的不同点在于，猫是森林之王老虎的兄弟。相对于狗，猫具有更强的独立生存能力，也具有更高的尊严。猫并不觉得自己需要依赖人而活着，所以它们不会刻意去取悦人。就像任何独立的人一样，猫只对那些爱自己，关心自己的人好。所以在某种程度上，猫一旦对人产生了感情，那就是真爱，不会伪装，也没有目的性。人们都喜欢骂势利小人是“哈巴狗”，骂卖国贼是“走狗”，有谁见过用猫的名字来骂人的？
 
 猫是一种特别有灵性的动物，它们似乎能用直觉感受到人的友好程度，也能感觉到“杀气”。对于陌生人，他们会很快的决定是否对他们友好，或是上前去打招呼，或是赶紧俯身遁逃。一个有趣的事情是，我的猫一般不怕小孩子，它会跟他们保持两米远的距离，但不会逃跑。它会好奇的尾随，观察小孩子，根据他们的表现来决定如何对待他们。所以如果见到陌生的猫，它直接对你友好的话，那你可能确实是可爱的，保持了童心的人。
 
 猫是认得人的，而且记性非常好。帮我喂过猫的朋友，几个月之后再来的时候，它会直接出来跟他们表示友好，而不需要再经过熟悉的过程。对于特别亲密的人，它甚至能从电话里识别出她的声音，在旁边喵喵的想插话，在视频里抢镜头。我也帮朋友喂过几次猫，所以我知道他的猫后来也认得我了。当你走进朋友的屋子，它那种跟你打招呼的感觉，确切点说就是“朋友”。
 
-猫有自己的尊严，它们并不认为你是自己的主人。很多养猫的人都把猫叫做“主子”，把自己叫做“猫奴”或者“铲屎工”，就是这个原因。而其实呢，猫只是认为自己跟你是平等的，你不是它的主人，它也不是你的主人。猫的尊严使得它们会跟人保持一定的距离。如果它们不喜欢你靠那么近，或者你嘴里刚吃了东西有臭味，就会用手掌把你撑开。它还会很通情达理，如果它想要到你的另外一边去，它会尽量不踩到你。如果真需要从你身上踩过去，它会选择踩不痛的地方，我也不知道它是怎么学会这些“礼仪”的。
+猫有自己的尊严，它们并不认为你是自己的主人。很多养猫的人都把猫叫做“主子”，把自己叫做“猫奴”或者“铲屎工”，就是这个原因。而其实呢，猫只是认为自己跟你是平等的，你不是它的主人，它也不是你的主人。猫的尊严使得它们会跟人保持一定的距离。如果它们不喜欢你靠那么近，或者你嘴里刚吃了东西有臭味，就会用手掌把你撑开。如果你还不知趣，可能还会给你一巴掌。它还会很通情达理，如果它想要到你的另外一边去，它会尽量不踩到你。如果真需要从你身上踩过去，它会选择踩不痛的地方，我也不知道它是怎么学会这些“礼仪”的。
 
 猫表达爱的方式有很多种，其中一种就是用头来蹭你。几乎每天早上起床之前，它都会到我旁边，倒下来把头放在我的手心里，然后反复的蹭我的手。我很喜欢那毛茸茸的头和脆脆的猫耳朵在手里打转的感觉 :) 很多人不知道如何接近一只猫，过去就想摸它们，结果把猫吓跑了。其实正确的作法是伸出手不动，等它们主动来蹭你。
 
@@ -26,4 +26,4 @@
 
 猫是非常爱干净的动物，它会在猫砂盆里大小便，然后把它盖起来没有味道。猫一天中的时间，很大部分都在梳洗自己，它会把自己舔得干干净净，一点都不臭，亲近的时候会闻到一种淡淡的体香。两年以来我从来不需要给它洗澡，却一直那么干净。干净到那种我亲吻它之后有帮它舔毛的冲动…… 朋友听了对我说：“你可别真的帮它舔毛啊！不然人家还得重新舔一遍，因为嫌弃你的口水不干净 :) ” 那么猫怎么清洁自己头上的毛呢？显然舌头是舔不到的。它会把口水弄到前掌上，然后用手掌洗脸，洗头发……
 
-我不仅爱猫，尊敬猫，我还从它们身上学到很多做人的道理。学它们不卑不亢，独立有尊严的性格，学它们明察秋毫，敏锐的直觉，学它们自在舒服，干净安逸的生活方式。亲爱的小莫奈，我就要去北京了。我知道你会想我的，我也会想你的，我会尽快回来跟你团聚。
+我不仅爱猫，而且我尊敬他们。是他们的尊严，独立和不卑不亢赢得了我的尊敬。
