Update the "rencent update" post.

--- a/blog/2018-10-14-update.markdown
+++ b/blog/2018-10-14-update.markdown
@@ -47,3 +47,5 @@
 上海是一个神奇的城市。这里有很多我喜欢的故事，是一个人杰地灵的地方。自从民国年代，许许多多的传奇故事发生在上海。我希望我在上海也有美好的故事。
 
 最后再次感谢大家的支持。
+
+> “近代中国之败，败在热衷权力的人太多，始终忠于理想的人太少。发动批判的人如不能自我批判，他一定是把批判当作获取权力的另一种形式。” —章伯钧
