Update 3 existing posts: pay, computer science and grammar.

--- a/blog/2016-04-13-pay-blog.markdown
+++ b/blog/2016-04-13-pay-blog.markdown
@@ -6,16 +6,6 @@
 
     ![](http://www.yinwang.org/images/alipay.jpg)
 
-2.  微信：
-
-    ![](http://www.yinwang.org/images/wechat-zan.jpg)
+2.  微信：由于微信付款经常出问题，暂时停止使用。
 
 3.  PayPal：请点击[[付款链接](http://paypal.me/yinwang0/5)]
-
-4.  加密货币：
-
-    *   比特币（BTC）：1MEvqnRgr1BirfmfpGXwxc4YVhok2gsr9F
-    *   BitcoinCash（BCH）：1DHF41RaMvfSaEScLF2i2nRsSwy8f7EcyM
-    *   ETH: 0xb9146f8e5cb800787edece517224670fe8983e4a
-
-    ​
