--- a/blog/2019-10-11-weibo.markdown
+++ b/blog/2019-10-11-weibo.markdown
@@ -1,13 +1,13 @@
-## 微博
+## 欢迎关注我的微博
 
-经过一段时间的考虑和试用之后，我决定重新开始使用微博。这个博客仍然是主要的，但由于微博的形式更加灵活方便，会被用作发布比较短的想法的场所。
+经过一段时间的考虑和试用之后，我决定重新开始使用微博。这个博客仍然是我主要的表达思想的地方，但由于微博的形式更加灵活方便，会被用来发布比较短，有时效性的想法。
 
-微博地址是：[https://www.weibo.com/u/6347862377](https://www.weibo.com/u/6347862377)，你也可以在主页右上方找到链接。欢迎关注。
+我的微博地址是：[https://www.weibo.com/u/6347862377](https://www.weibo.com/u/6347862377)，你也可以在这个博客的右上方找到微博链接。欢迎关注。
 
-回国之后观察了那么多的明星大碗，各路大佬的言论，看了各种电视剧，电影，综艺节目之后，我发现国内靠谱的声音实在太少了。在很多国人的心里，钱就是发言权，各种盲从和浮夸的风气盛行，电视剧电影里面也存在很多扭曲的世界观和价值观。发展了这么多年，中国仍然缺少成熟而具有独立思想的人。
+回国经过这么长时间的体验之后，我发现国内靠谱的声音还是太少了，不论是在技术领域还是在社会认知上，都有很多不足。中国其实仍然很落后，不只是在物质上，建设上，技术上，而且在社会心理上，有很多地方落后于发达国家。长期的自卑心理导致了自傲，很多人不再能看到我们的缺点，因为好像“有钱了”而自我膨胀，停滞不前。
 
-我应该唤醒和影响更多的人，我的思想和看法应该受到更多人的关注，所以我决定重新打开微博这个重要的信息渠道。对我的想法感兴趣的人，都可以关注我的微博。
+在很多国人心里，钱就是发言权，各种盲从和浮夸的风气盛行，价值观颠倒。许多有着千万粉丝的名人大腕，面对各种事情却说不出正确导向的话来。所以我觉得我应该影响更多的人，为改善社会尽自己的一份力，我这样的人应该有更多的“粉丝”。这就是为什么我重新打开微博这个重要的信息渠道，让那些对我的想法感兴趣的人可以关注。
 
-为了避免评论里面出现一些其他用户之间冗长的争论和无关低级的言论，我的微博不开评论。如果你想表达自己的看法，可以在转发之后在自己的空间进行评论。我将誓死捍卫你的发言权 :)
+我知道很多支持我的人不用微博，已经几次为我重新打开微博。我恐怕得再次麻烦他们打开微博了。其实说实话，如果你跳出技术的圈子，微博上还是有蛮多有趣有价值的内容的，重要的是要会选择。
 
-我只希望我们的社会越来越好。
+为了维护健康的环境，避免评论里出现冗长或者恶意的争论，我不开放微博的评论功能。如果你需要表达自己的看法，可以在转发之后在自己的空间进行评论。我想这并不损害任何人的言论自由。
