--- a/blog/2014-02-04-pl-tool.markdown
+++ b/blog/2014-02-04-pl-tool.markdown
@@ -10,7 +10,7 @@
 
 这个问题就是，当运行出现错误的时候，Racket 不告诉我出错代码的具体行号，甚至出错的原因都不说清楚。我经常看到这样一些出错信息：
 
-<div class="highlighter-rouge">
+<div class="language-plaintext highlighter-rouge">
 
 <div class="highlight">
 
