Update the plan post.

--- a/blog/2020-01-16-plan.markdown
+++ b/blog/2020-01-16-plan.markdown
@@ -128,105 +128,34 @@
 
 我相信通过我的努力，中国的技术和外语教学领域都会出现巨大的变化。
 
-### 大众导师计划（搁置）
+### 从顾问到授课
 
-为了建立起最高水准的，真正的教育机构，我的初期计划是做一个“大众导师”。我会收一些“徒弟”，其中的一些会成为非常优秀的人，这些人中间又会出现懂得教育理念的人。这样发展下来，就可以形成一个纯正的教育传承体系。
+为了建立起最高水准的，真正的教育机构，我的初期计划是做一个顾问或者导师。为有需求的人提供个性化，一对一的指导。目前这个服务已经开通，详情请见这篇新的文章《[顾问（导师）服务试运行方案](http://www.yinwang.org/blog-cn/2020/01/17/advising)》。
 
-当然这个教育体系应该包括我没有涉足的领域，所以我也欢迎各个其它领域的人来参与，指导和启发我。
+由于一个人的“带宽”有限，如果都是个性化的指导，那么只有很少的人可以接收到知识，而且价格会很贵。所以我的下一步就是逐步开发各种实验课程，可以容纳多人一起教学。这些课程遵循我的教育理念，深入浅出的把入门者一步步带入最精华的殿堂。不仅是计算机科学，而且还可以把英语融入进去。由于是交互式的小班教学，所以效果也会很好。
 
-很多人从我的文章里获得了许多的启发和指引，然而他们仍然有许多迷茫的地方，而且每个人都有不同的盲点。总是有人来信问我，我该怎么学，我看这本书怎么看不懂…… 然而我发现，我无法用简短的语言告诉他们怎么做，因为没有深入了解他们，我根本不知道他们认知的缺陷在哪里。所以我觉得他们需要的不是书本，不是课程，不是自己折腾，而是一个能够知道他们弱点，并且指出方向的导师。
+如果你知道 GPU 并行计算的原理，就会发现课程本质上是一对多的 GPU 计算，而顾问或者导师是一对一的 CPU 计算。要充分发挥计算的性能，我们不能只有 CPU 或者只有 GPU，而是两者都有。所以我会把顾问和课程逐渐结合在一起，形成有机的整体，最大效率的发挥，造福尽可能多的人。
 
-我愿意做一个导师。我很喜欢跟人聊天，了解他们的认识，我也很喜欢帮助他们认识到很多事情。所以对于我来说，做导师是一件很自然很轻松的事情。当然，我这个导师是世界上都难得的，我希望找到珍惜这种缘分的学生。
+在计划中的课程内容可能包括：
 
-当然，这么高水准的导师不可能是免费的，其中获得的收入，将作为成立正式的教育机构所需要的经费。许多人认识我，来找我聊天，可是很多时候我发现他们只想获得，不愿付出。很多人见到我光是问他的问题，得到答案就走，这并不是尊重人的方式。我愿意指导的，当然是知道好歹，懂得付出的学生。
+1.  计算机科学入门
+2.  [掌握所有的编程语言](http://www.yinwang.org/blog-cn/2017/07/06/master-pl)
+3.  C++，Java，Python，JavaScript，Haskell
+4.  [编程的智慧](http://www.yinwang.org/blog-cn/2015/11/21/programming-philosophy)——如何写出优雅的代码
+5.  算法
+6.  编程语言理论
+7.  操作系统
+8.  计算机体系构架
+9.  编译器设计和实现
+10.  函数式编程
+11.  逻辑式编程
+12.  机器学习（深度学习，计算机视觉等）
 
-所以对于普通学生，我的指导是收学费的。具体的方式和标准我会另外考虑，也会根据每个人的情况有所不同。对于那些同时能教会我其它领域知识的人，我甚至可以给他免费。但要注意，要想获得这种交换，你必须是另外的领域很在行的人。
+​ ……
 
-这个导师计划，稍后也可能有我认可的专家加入。就像清华的姚班的方式，也许会有短期的“客座教授”来给大家做短期讲座。
+每一个课程，我都会试图用最简单直观的方式来讲解。
 
-当然，大家都不免有看错人的时候。如果我发现学生的人品或者态度有问题，我会停止向他传授。
-
-这个大众导师计划，一方面是为了培养下一代的人才，另一方面为了培养新一代的教育者，而且是为我设想中的大型教育机构筹备资金。
-
-从现在开始，觉得自己满足我所期望的人格和态度条件，并且有一定学习能力的人，可以向我申请成为第一批学生。你的申请 email 里面请包括以下内容：
-
-1.  标题：申请导师指导。
-2.  称呼：王垠先生。请勿使用其它称呼。
-3.  你的自我介绍，当前的职业状况，在职公司名称，职级，教育水平等。
-4.  你的求学动机。
-5.  你的月收入，你可以接受的每月开销。
-
-请勿写得过长，注意精简语言，保持字数大概 2000 字以内。注意态度，因为这就像申请国外大学写的 personal statement。排版工整，段落不要太长，注意标点符号的正确使用。
-
-职级和月收入请如实填写。因为有了这样的导师能提升学生在职场的整体竞争力，所以收费标准是和学生的职务和收入水平挂钩的。如果后期发现有谎报的情况，会立即终止指导。
-
-如果我看了觉得申请满足条件，会进行下一步的沟通和面试，然后开始安排合适的指导方式和时间。如果我觉得不满足条件，我也会回复你。由于申请者数量在短期内可能会比较多，所以请耐心等待我的回复。
-
-目前这个计划的交流主要考虑采取网络音视频的方式，所以不需要考虑地域限制。有了一定数量的学员之后，我会在合适的时候组织学生进行网络视频会议，探讨大家关心的问题，各抒己见。我也会考虑安排线下的交流活动和讲座。
-
-当然一旦成为导师，其中的某些学生可能成为优秀的创业者，做出极好的技术和产品。在这种情况下，我会继续以自己的优势帮助这些人，达成他们的创业计划。其中如果有我特别喜欢的项目，我也可能直接参与。
-
-#### 更新：
-
-“大众导师计划”收到了很多人的申请，然而我发现这个计划并不可行。
-
-一来是作为导师，我需要付出很多的时间和心思，这些都是有时间成本的，而我发现很多人不能承担由此产生的学费。二来是学生的质量必须有一定要求，很多人的基础不够，或者心智不够成熟，并不能有效的进行教学。
-
-从这个实验，我学到了商业模式的第一课。如果提供个性化的服务，成本就会很高，效果也会很好。如果提供标准化服务，成本就会降低，效果就会稍差，虽然比起普通课堂还是好很多。所以必须在这两者之间选择一个平衡。
-
-如果你联系一下计算机的原理，就会发现个性化服务对应着 CPU，标准化服务对应着 GPU。
-
-所以这个”导师计划“虽然看起来美好，对于我来说却并不是好的商业模式，得暂时搁置起来。留下来一个顾问服务，我又加上一个“问答”实验，作为“导师计划”的一个低成本的替代品。
-
-### 专家顾问服务
-
-在进行长期教学的同时，我希望我对很多事物的深刻见解，能够在短时间内帮助其它的一些人。比如公司里的技术人员，管理人员，决策者，投资人。我希望我的才能通过这种方式能够间接的作用到社会。
-
-根据我在各个公司的经验，我的认识水平在每个公司都处于顶级的指导者地位。我能很清晰的分析，化简，指导项目的方向。甚至包括我没有碰过的领域，也能迅速的理解，吸收，并且看到行内专家都无法看到的要点。
-
-很可惜，我待过的所有公司都没能有领导者珍惜我的能力，自以为是的现象严重，很多时候白费功夫跟他们说话，甚至受到打压。所以现在我决定，我的这种能力不再属于任何一家公司。我决定成为大众的顾问。
-
-很多公司里的技术人员都有很多时候看不准方向，比如不知道选择什么样的语言或者技术，采用什么样的策略解决问题。更糟的是，他们的指导者也不很懂，或者瞎指挥。
-
-很多投资人面对技术领域的项目都是一脸懵，只能看表面现象，派去的投资经理也只能回来汇报说创始人是什么名校毕业，名企高管等，根本无法防止这些人的忽悠。我曾经帮助好些投资人，避免他们被骗，给他们准确指出项目方案的可行性。
-
-这些情况都可以采用我的这种高级顾问服务。就像名医问诊，或者律师咨询的方式一样，我提供按时间收费的顾问服务。它的执行方式如下：
-
-1.  首先，发送 [email](mailto://yinwang.advising@gmail.com)。
-2.  标题：申请顾问服务。
-3.  称呼：王垠先生。请勿使用其它称呼。
-4.  自我介绍。如果是个人，请介绍职业状况，在职公司，职级等。如果是企业，请简要介绍企业的状况。
-5.  简要说明你遇到的问题，已经试过的方案等。
-6.  如果是职员，请说明收入状况。如果是投资人，请说明涉及的项目金额。
-
-请注意来信不要过长，限制 2 千字以内。注意排版工整，段落不要太长，注意标点符号的正确使用。
-
-收入和涉及的投资金额请如实填写。因为这个顾问咨询能够产生成比例的效益，所以收费标准是和收入水平或者投资金额挂钩的。
-
-注意事项：
-
-1.  对于不满足价值观标准的动机，我可能拒绝成为顾问。
-2.  顾问服务只能指出方向，而不会去具体地进行操作。这类似于研究生导师，或者高水准的团队领导者提供的指导，并不包括具体解决问题。对于编程问题，请不要希望直接获得我写的代码，虽然我也许会给你一些示范。
-3.  顾问指导也许不能一次解决问题。虽然我会使用最大的洞察力和职业道德，但你可能需要按照我的建议自己进行探索，反馈，反复进行咨询。请接收这种服务本身的局限性，不要指望一定能解决问题。
-4.  如果需要聘请长期的顾问，请另外说明来意。
-
-决定提供顾问服务之后，我会根据具体的问题，向你沟通费用标准，安排交流时间。对于比较复杂，需要进行一定研究的项目，我会在初步了解难度和复杂度之后，给出一定的收费标准。
-
-顾问服务主要也通过网络音视频方式进行，一般限制在半小时以内，以最大限度的发挥效果。如果有特殊情况，也可以当面进行，不过需要收取更高的费用。
-
-### Email 问答
-
-一对一的导师式辅导并不适合很多人。一来是作为导师，我需要付出很多的时间和心思，而很多人不能承担由此产生的学费。二来是学生的质量必须有一定要求，很多人的基础不够，或者心智不够成熟，并不适合作为我的学生。
-
-顾问服务的费用也较高，因为它采用直接的音视频，所以需要占用大量的时间和精力。所以对于普通的需要帮助的人，可以使用更简单的做法，那就是 email 问答。
-
-1.  首先，发送 [email](mailto://yinwang.advising@gmail.com)。
-2.  标题：申请问答服务。
-3.  称呼：王垠先生。
-4.  自我介绍。简要说明你的情况。
-5.  简要说明你遇到的问题，已经试过的方案等。
-
-收到你的问题之后，我会有选择的回答。如果问题不符合条件，我会告诉你拒绝回答。如果我回答你的问题，会根据问题的难度，给出你需要的费用。采用我提供的方式付款之后，我会给你发送回复。同一个问题允许追问补充两次，以免某些地方我的回复难以理解。
+逐渐的，我培养出来的受到良好教育的人们，有些会逐渐变成老师，这样我设想中的教育事业就可以发展起来了。另外一些不做老师，可以工作也可以创业，我希望他们纯净的人品和才能，能够逐渐改变业界的面貌。
 
 ### 改善中国
 
