--- a/blog/2020-01-16-plan.markdown
+++ b/blog/2020-01-16-plan.markdown
@@ -110,15 +110,15 @@
 
 钻进钱眼里，所以大学已经失去了它们原来崇高的社会作用，失去了在人们心目中的地位。后来发展起来的 MOOC，从来没有摆脱传统大学授课的方式。很多只不过把课堂的视频录下来，放在网络上给人观看，然后大家看书，做作业，考试，发证书…… 许多人为了个证书混完网络课程，其实根本没学会什么。这并不是我理念中的“教育”。
 
+所以，虽然我说要建立“世界最高水准”的教育机构，而其实达到这个“最高水准”并没有很难。因为大部分的教育都是失败的，甚至可以说是假的，坑人的，所以也许我不应该把我的目标叫做“世界最高水准的教育”，而应该叫做“真实的教育”。
+
 真正的教育是能改造一个人的，是人传人的。就像武林高手收徒弟一样，必须因材施教。一个老师看不到学生在方法和认识上的缺陷，光是照本宣科，他的课程录下来又有什么用呢？教育必须是交互式的，必须由真懂的人来传授，而这个老师又必须懂得学生的心理和认知状态。
 
 这样的老师，在世界上是非常罕见的。绝大部分大学教授，基本跟“老板”一样，光是指挥，为了自己发 paper 评职称，拉 funding。真会教学的人往往不受重视，评不上职称，所以往往流失到其它地方去了，失去了他们作为教育者的优势。有幸留在学校里的，往往也名不见经传。
 
 许多人不明白这个道理，总是看学校的名气，教授的名声，发 paper 的引用数，所以他们最后并没有获得真正的学识，只是遇到了一个有权势的老板，最后变得跟他一样，在虚无的关系网中到处爬。
 
-许多人都请教我，他该看什么书，我也考虑过写书，然而书本却永远也无法代替亲身的传授。这就是为什么我后来对写书失去了兴趣。因为书本无法形成交互，无法找到学生的短处和痛点，而学生也不知道应该如何吸收里面的内容，如何构建自己的知识体系。所以写书并不是我最大的兴趣。
-
-我最大的兴趣是直接给人以指点，指引他们去获得真正的知识。
+许多人都请教我，他该看什么书，我也考虑过写书，然而书本却永远也无法代替亲身的传授。这就是为什么我后来对写书失去了兴趣。因为书本无法形成交互，无法找到学生的短处和痛点，而学生也不知道应该如何吸收里面的内容，如何构建自己的知识体系。所以写书并不是我最大的兴趣。我最大的兴趣是直接给人以指点，指引他们去获得真正的知识。
 
 这个教育机构，应该不光是我所在行的技术领域。在将来它会逐渐容纳其它方向的内容，比如英语，艺术等。我一直认为英语是对于中国人非常重要的，因为一旦能把英语学到融会贯通，你就打开了一扇前所未有的知识的大门，能够直接掌握最先进最精确的知识。回国这些年，我的几乎所有新知识仍然是从英文文献或者网络获得的，很少发现中文内容有值得学习的地方。
 
