--- a/blog/2020-01-17-advising.markdown
+++ b/blog/2020-01-17-advising.markdown
@@ -1,37 +1,44 @@
 ## 顾问服务试运营方案
 
-我的初期计划是做一个大众的顾问。这相当于我在各大公司起到的指导作用，只不过现在是面向大众，而不是专属于团队里的人员。我在公司里的时候，困住很多人的问题都可以在短时间内得到我的指点，以继续他们的下一步工作，所以这种顾问服务似乎是一个好的出发点。
+我的初期计划是做一个「大众顾问」。这相当于我在公司里起到的指导作用，只不过现在是面向大众，而不是专属于公司团队。这种方式就像医生问诊或者律师咨询一样，只不过我不采用单次收费的方式。
 
-大部分人都可以采用我的这种高级顾问服务，就像医生问诊，或者律师咨询的方式一样。由于很多人可能一时都不知道该问什么，或者问很笼统无法回答的问题，所以我不再采用单次咨询的方式。顾问服务采取按月收费的模式，费用根据你的需求级别和薪资水平来定。
+不采用单次收费的原因是，我发现很多人不知道如何有效提问。如果只有一次机会，他们在提问之前会过度紧张和谨慎，导致耗费太多时间精力，提出的问题也不会很好。所以我采取按月收费模式，在服务期间随时提出问题，而不需要对问题进行严密组织。
+
+我发现把复杂问题一步步分散提出来，往往比经过严密组织更加有效。因为很多人并不能有效组织问题，所以应该鼓励他们看到冰山一角的时候就开始提问。这样经过帮助，逐步把整个问题诱导出来，达到比他们自己总结问题更好的效果。
+
+### 顾问形式
+
+1.  微信。如果满足条件，你会被加到我的工作微信。简单问题可以通过微信问答方式解决。
+2.  网络会议。对于比较复杂的问题，可以通过网络会议方式进行。使用 Zoom 之类的软件，可以共享屏幕，使用语音或者视频。经过一段时间试验，我发现网络会议可以达到和当面讲解一样的效果。
+3.  当面咨询。如果有需要也可以当面进行咨询，不过需要另外收取费用。
+
+### 其它福利
+
+顾问的正式内容只包括一对一的答疑和指点，但我发现偶尔组织一些线上活动，会有利于激发学员的思考。
+
+1.  讨论活动。兴趣和水平相近的咨询者会被组织在一起，参加小组讨论活动。活动由我主持，大家可以用会议软件接入，进行提问和讨论。经过一段时间的试验，参加者普遍反映有兴趣，有收获。
+2.  参与讲座。针对多数人感兴趣的话题，我会不定期安排讲座。主讲人可能是我，也可能是我邀请的客座专家。
+3.  参与课程实验。由于我在设计系统课程的过程中需要「小白鼠」，所以参加咨询的人员，可能参与我的「授课实验」。虽然课程实验也许不如正式的授课完善，但你也许能从中学到一些正式课程里学不到的思想。另外由于这是非正式的讲课，互动性和参与感也会更强一些。
+
+需要注意的是，请不要把这些额外的福利当成应得的，必须的。我可能会对这些进行调整。顾问的收费不包括这些内容，我不对它们的结果负责。
 
 ### 申请方法
 
-1.  首先，发送 [email](mailto://[yinwang.advising@gmail.com](mailto:yinwang.advising@gmail.com)?subject=申请顾问服务&body=王垠先生：%0A1\. 简单自我介绍。学习工作单位，职级，工作内容，爱好等。%0A2\. 你寻求顾问帮助的动机和需求，期望达到的目标。%0A3\. 月收入（税后），可以接受的顾问费用开销。)。
+1.  首先，发送 [email](mailto://[yinwang.advising@gmail.com](mailto:yinwang.advising@gmail.com)?subject=申请顾问服务&body=王垠先生：%0A1\. 简单自我介绍。教育经历，工作单位，工作内容，职级等。%0A2\. 你寻求顾问帮助的动机，需求，期望达到的目标。)。
 2.  标题：申请顾问服务。
-3.  称呼：王垠先生。请勿使用其它称呼。
-4.  简单自我介绍。学习工作单位，职级，工作内容，爱好等。
-5.  你寻求顾问帮助的动机和需求，期望达到的目标。
-6.  月收入（税后），可以接受的顾问费用开销。
+3.  称呼：王垠先生。
+4.  简单自我介绍。教育经历，工作单位，工作内容，职级等。
+5.  你寻求顾问帮助的动机，需求，期望达到的目标。
 
 ### 注意事项
 
 1.  请注意来信不要过长，限制一千字以内。注意排版工整和标点符号的正确使用。段落不要太长，段落之间留一行空白。请使用纯文本，不要使用花哨的字体和固定宽度的 HTML。不清楚的话，可以参考我的文章格式。
-2.  顾名思义，“顾问”的作用只是“照顾问题”，而不是手把手教你系统的知识。如果你需要系统的补充基础知识，可以留意我将要发布的课程。
-3.  顾问只能指出方向，而不会具体进行操作，不会帮你完成工作。这类似于研究生导师，或者技术带头人提供的指导，并不包括具体解决问题。对于编程问题，请不要期望直接获得我写的代码，虽然我也许会给你一些示范或者提示。
-4.  不指导低级使用问题，比如怎么安装和配置某些软件一类的。简单的指出方向是可以的，但你需要自己去折腾。问题应该是是知识性，思维性，创造性的。
-5.  顾问是私密提供指点，是实质性的，不允许利用名声。比如在网站上说本公司顾问是王垠之类的，如果发现会追究法律责任。总的原则是，你不公开提我的名字，我也不公开提你的名字，以完全消除对名声的利用。
-6.  咨询过程中的具体内容属于隐私，受法律保护，请不要在网络上公开。但根据需要，我有权公开某些典型问题及其答案。当然，会隐去提问者的名字和隐私信息。
-7.  根据实际的感觉和需求，双方都有权在到期的时候无条件取消顾问服务。如果发现尊重和礼貌问题，或者发现利用顾问服务来达到非学习目的，我有权随时终止顾问服务。
+2.  顾名思义，顾问的作用是「照顾问题」，而不是讲课，不是手把手教你系统的知识。如果你需要系统的补充基础知识，可以留意我将要发布的课程。
+3.  顾问只能指出方向，而不会具体进行操作，不会帮你完成工作或者作业。这类似于研究生导师，或者技术带头人提供的指导，并不包括具体解决问题。有了方向，具体的学习肯定是你自己完成。
+4.  不指导低级使用问题，比如怎么安装和配置某些软件一类的。简单的指出方向是可以的，但你需要自己去折腾。问题应该是知识性，思维性，创造性的。
+5.  不满足急功近利的目标。比如急于转行，刷题换工作，加薪一类的低级目标。虽然我不否认这些世俗的需求，但我的顾问服务传授的是原理性质的东西，引导人们朝着高的目标前进，不会以这种低级目标为中心。所以我不接受只有低级目标的咨询者，不能保证能满足他们紧迫的需求。如果有此类需求，你应该考虑参加个速成培训班。
+6.  顾问是私密提供指点，是实质性的，不允许利用名声。比如在网站上说本公司顾问是王垠之类的，如果发现会追究法律责任。总的原则是，你不公开提我的名字，我也不公开提你的名字，以完全消除对名声的利用。
+7.  咨询过程中的具体内容属于隐私，受法律保护，请不要在网络上公开。但根据需要，我有权公开某些典型问题及其答案。当然，会隐去提问者的名字和隐私信息。
+8.  根据实际的感觉和需求，双方都有权在到期的时候无条件取消顾问服务。如果发现尊重和礼貌问题，或者发现利用顾问服务来达到非学习目的，我有权随时终止顾问服务。
 
-### 顾问的形式
-
-1.  微信。如果你满足条件，你会被加到我的工作微信。大部分简单问题通过微信问答方式解决。由于一个人带宽有限，如果没有及时回复请耐心等待。
-2.  语音。对于比较复杂的问题，通过语音方式进行。由于一个人带宽有限，对每个人的语音时间和次数可能会有限制。
-3.  当面咨询。如果有需要也可以当面进行咨询，不过需要另外收取费用。
-
-### 其它可能的福利
-
-1.  参与顾问服务的学生，根据态度和认识程度，会被优先考虑参加稍后会进行的系统的课程。
-2.  我会不定期安排即兴的讲座和讨论。因为是即兴的，也许会包含比正式的课程更多的启发信息。比如我讲的时候可能发现一些自己的认识错误，如果你参与了，你就会知道错在哪里。这些错误和整个分析的过程，都可能是有益的经验。
-
-这些设计会随着经验的加深不断地改进。我相信通过我的顾问指点，好的思想会逐渐影响到越来越多的人。
+这些设计会随着经验的加深不断改进。我相信通过我的指点，好的思想会逐渐影响到越来越多的人。
