--- a/blog/2020-01-17-advising.markdown
+++ b/blog/2020-01-17-advising.markdown
@@ -1,44 +1,36 @@
-## 顾问服务试运营方案
+## 顾问服务试运营方案（v2.0）
 
-我的初期计划是做一个「大众顾问」。这相当于我在公司里起到的指导作用，只不过现在是面向大众，而不是专属于公司团队。这种方式就像医生问诊或者律师咨询一样，只不过我不采用单次收费的方式。
+我的初期计划是做一个「大众顾问」。这相当于我在公司里起到的指导作用，只不过现在是面向大众，而不是专属于公司团队。这种方式就像医生问诊或者律师咨询一样，只不过我不采用单次收费的方式，而是可以把时长分段使用。「时长分段」的意思是，你可以把顾问时间分段使用，而不需要打个电话一次用完。
 
-不采用单次收费的原因是，我发现很多人不知道如何有效提问。如果只有一次机会，他们在提问之前会过度紧张和谨慎，导致耗费太多时间精力，提出的问题也不会很好。所以我采取按月收费模式，在服务期间随时提出问题，而不需要对问题进行严密组织。
+不采用单次咨询的原因是，技术领域的问题不是很容易总结，很多人不知道如何有效提问。如果只有一次机会，他们在提问之前会过度紧张和谨慎，导致耗费太多时间精力，提出的问题也不会很好。所以我采取按时长分段模式，在服务期间随时提出问题，而不需要对问题进行严密组织。
 
 我发现把复杂问题一步步分散提出来，往往比经过严密组织更加有效。因为很多人并不能有效组织问题，所以应该鼓励他们看到冰山一角的时候就开始提问。这样经过帮助，逐步把整个问题诱导出来，达到比他们自己总结问题更好的效果。
 
 ### 顾问形式
 
-1.  微信。如果满足条件，你会被加到我的工作微信。简单问题可以通过微信问答方式解决。
+1.  Slack。你会被加到我的 Slack 工作空间。普通问题可以通过发消息问答方式解决。
 2.  网络会议。对于比较复杂的问题，可以通过网络会议方式进行。使用 Zoom 之类的软件，可以共享屏幕，使用语音或者视频。经过一段时间试验，我发现网络会议可以达到和当面讲解一样的效果。
-3.  当面咨询。如果有需要也可以当面进行咨询，不过需要另外收取费用。
 
-### 其它福利
+### 收费标准
 
-顾问的正式内容只包括一对一的答疑和指点，但我发现偶尔组织一些线上活动，会有利于激发学员的思考。
+目前针对个人的费用标准是 2000 元/小时，有效期为 1 个月。也就是说一个月之内你可以分多次使用一个小时的时间。商业项目费用另谈。特此注明，为了大家没有预期偏差，浪费申请的时间。
 
-1.  讨论活动。兴趣和水平相近的咨询者会被组织在一起，参加小组讨论活动。活动由我主持，大家可以用会议软件接入，进行提问和讨论。经过一段时间的试验，参加者普遍反映有兴趣，有收获。
-2.  参与讲座。针对多数人感兴趣的话题，我会不定期安排讲座。主讲人可能是我，也可能是我邀请的客座专家。
-3.  参与课程实验。由于我在设计系统课程的过程中需要「小白鼠」，所以参加咨询的人员，可能参与我的「授课实验」。虽然课程实验也许不如正式的授课完善，但你也许能从中学到一些正式课程里学不到的思想。另外由于这是非正式的讲课，互动性和参与感也会更强一些。
-
-需要注意的是，请不要把这些额外的福利当成应得的，必须的。我可能会对这些进行调整。顾问的收费不包括这些内容，我不对它们的结果负责。
+顾问的时间是指花费我的时间，你自己准备问题的时间不算在内。但如果你对问题的描述冗长，难以理解，或者有附加的文件要看，我花费的时间也会计算在内。
 
 ### 申请方法
 
-1.  首先，发送 [email](mailto://[yinwang.advising@gmail.com](mailto:yinwang.advising@gmail.com)?subject=申请顾问服务&body=王垠先生：%0A1\. 简单自我介绍。教育经历，工作单位，工作内容，职级等。%0A2\. 你寻求顾问帮助的动机，需求，期望达到的目标。)。
+1.  首先，发送 [email](mailto:yinwang.advising@gmail.com?subject=申请顾问服务&body=王垠先生：%0A1\. 简单自我介绍。教育经历，工作单位，工作内容，职级等。)。
 2.  标题：申请顾问服务。
 3.  称呼：王垠先生。
 4.  简单自我介绍。教育经历，工作单位，工作内容，职级等。
-5.  你寻求顾问帮助的动机，需求，期望达到的目标。
 
 ### 注意事项
 
-1.  请注意来信不要过长，限制一千字以内。注意排版工整和标点符号的正确使用。段落不要太长，段落之间留一行空白。请使用纯文本，不要使用花哨的字体和固定宽度的 HTML。不清楚的话，可以参考我的文章格式。
+1.  来信不要过长，限制 500 字以内。注意排版工整和标点符号的正确使用。
 2.  顾名思义，顾问的作用是「照顾问题」，而不是讲课，不是手把手教你系统的知识。如果你需要系统的补充基础知识，可以留意我将要发布的课程。
-3.  顾问只能指出方向，而不会具体进行操作，不会帮你完成工作或者作业。这类似于研究生导师，或者技术带头人提供的指导，并不包括具体解决问题。有了方向，具体的学习肯定是你自己完成。
-4.  不指导低级使用问题，比如怎么安装和配置某些软件一类的。简单的指出方向是可以的，但你需要自己去折腾。问题应该是知识性，思维性，创造性的。
-5.  不满足急功近利的目标。比如急于转行，刷题换工作，加薪一类的低级目标。虽然我不否认这些世俗的需求，但我的顾问服务传授的是原理性质的东西，引导人们朝着高的目标前进，不会以这种低级目标为中心。所以我不接受只有低级目标的咨询者，不能保证能满足他们紧迫的需求。如果有此类需求，你应该考虑参加个速成培训班。
-6.  顾问是私密提供指点，是实质性的，不允许利用名声。比如在网站上说本公司顾问是王垠之类的，如果发现会追究法律责任。总的原则是，你不公开提我的名字，我也不公开提你的名字，以完全消除对名声的利用。
-7.  咨询过程中的具体内容属于隐私，受法律保护，请不要在网络上公开。但根据需要，我有权公开某些典型问题及其答案。当然，会隐去提问者的名字和隐私信息。
-8.  根据实际的感觉和需求，双方都有权在到期的时候无条件取消顾问服务。如果发现尊重和礼貌问题，或者发现利用顾问服务来达到非学习目的，我有权随时终止顾问服务。
+3.  顾问只能指出方向，而不会具体进行操作，不会帮你完成工作或者作业，不保证解决所有问题。这类似于研究生导师，或者技术带头人提供的指导，并不包括具体解决问题。有了方向，具体的学习肯定是你自己完成。
+4.  顾问是私密提供指点，是实质性的，不允许利用名声。比如在网站上说本公司顾问是王垠之类的，如果发现会追究法律责任。总的原则是，你不公开提我的名字，我也不公开提你的名字，以完全消除对名声的利用。
+5.  咨询过程中的具体内容属于隐私，受法律保护，请不要在网络上公开。但为了服务大众的需要，我有权公开某些典型技术问题及其答案。当然，会隐去提问者的名字，隐私信息和商业机密。
+6.  如果发现尊重和礼貌问题，我有权随时终止顾问服务，并按比例退回余款。
 
 这些设计会随着经验的加深不断改进。我相信通过我的指点，好的思想会逐渐影响到越来越多的人。
