Update 8 posts and add 3 posts.

--- a/blog/2016-04-13-pay-blog.markdown
+++ b/blog/2016-04-13-pay-blog.markdown
@@ -1,8 +1,6 @@
 ## 博文的自愿付费方式
 
-喜欢我的文章的人，可以自愿付费赞助。你的支持将会帮助我的博客保持独立和自由，不受控制的发表真实的见解。
-
-你可以使用以下方式付款。为了防止有人滥用这些付款方式，我给它们设置了固定的金额。
+喜欢我的文章的人，可以自愿付费。你可以使用以下方式付款。为了防止有人滥用这些付款方式，我给它们设置了固定的金额。
 
 1.  支付宝（32 元）：
 
@@ -12,6 +10,4 @@
 
     ![](http://www.yinwang.org/images/alipay-1024.jpg)
 
-3.  微信：由于微信付款经常出问题，暂时停止使用。
-
-4.  PayPal：请点击[[付款链接](http://paypal.me/yinwang0/5)]
+3.  PayPal：请点击[[付款链接](http://paypal.me/yinwang0/5)]
