--- a/blog/2020-01-17-advising.markdown
+++ b/blog/2020-01-17-advising.markdown
@@ -1,8 +1,10 @@
-## 顾问服务试运营方案（v2.0）
+## 顾问业务试运营（v2.0）
+
+（2020.03.25 更新：考虑到很多人的难处，现在把顾问业务的有效期放宽到一个月，价格和时长不变。）
 
 我的初期计划是做一个「大众顾问」。这相当于我在公司里起到的指导作用，只不过现在是面向大众，而不是专属于公司团队。这种方式就像医生问诊或者律师咨询一样，只不过我不采用单次收费的方式，而是可以把时长分段使用。「时长分段」的意思是，你可以把顾问时间分段使用，而不需要打个电话一次用完。
 
-不采用单次咨询的原因是，技术领域的问题不是很容易总结，很多人不知道如何有效提问。如果只有一次机会，他们在提问之前会过度紧张和谨慎，导致耗费太多时间精力，提出的问题也不会很好。所以我采取按时长分段模式，在服务期间随时提出问题，而不需要对问题进行严密组织。
+不采用单次咨询的原因是，技术领域的问题不是很容易总结，很多人不知道如何有效提问。如果只有一次机会，他们在提问之前会过度紧张和谨慎，导致耗费太多时间精力，提出的问题也不会很好。所以我采取按时长分段模式，在期间随时提出问题，而不需要对问题进行严密组织。
 
 我发现把复杂问题一步步分散提出来，往往比经过严密组织更加有效。因为很多人并不能有效组织问题，所以应该鼓励他们看到冰山一角的时候就开始提问。这样经过帮助，逐步把整个问题诱导出来，达到比他们自己总结问题更好的效果。
 
@@ -13,24 +15,26 @@
 
 ### 收费标准
 
-目前针对个人的费用标准是 2000 元/小时，有效期为 1 个月。也就是说一个月之内你可以分多次使用一个小时的时间。商业项目费用另谈。特此注明，为了大家没有预期偏差，浪费申请的时间。
+目前针对「个人学习」的咨询费用标准是 2400 元/小时，有效期为 1 个月。也就是说一个月之内你可以分多次使用一个小时的时间。商业项目费用另谈。
 
 顾问的时间是指花费我的时间，你自己准备问题的时间不算在内。但如果你对问题的描述冗长，难以理解，或者有附加的文件要看，我花费的时间也会计算在内。
 
+为了避免对我提供的信息进行高价倒卖的情况，会有一定的问题级别限制。这个价格不会提供“研究级”问题的指点。如果你的问题超过了普通程序员的级别，比如关于深入的 PL，编译器，深度学习，区块链方面的热点问题，需要酌情增加收费。所以你有这类需求的话，请先来信咨询。
+
 ### 申请方法
 
-1.  首先，发送 [email](mailto:yinwang.advising@gmail.com?subject=申请顾问服务&body=王垠先生：%0A1\. 简单自我介绍。教育经历，工作单位，工作内容，职级等。)。
-2.  标题：申请顾问服务。
+1.  首先，发送 [email](mailto:yinwang.advising@gmail.com?subject=申请顾问业务&body=王垠先生：%0A1\. 简单自我介绍。教育经历，工作单位，工作内容，职级等。)。
+2.  标题：申请顾问业务。
 3.  称呼：王垠先生。
 4.  简单自我介绍。教育经历，工作单位，工作内容，职级等。
 
 ### 注意事项
 
 1.  来信不要过长，限制 500 字以内。注意排版工整和标点符号的正确使用。
-2.  顾名思义，顾问的作用是「照顾问题」，而不是讲课，不是手把手教你系统的知识。如果你需要系统的补充基础知识，可以留意我将要发布的课程。
+2.  顾名思义，顾问的作用是「照顾问题」，而不是讲课，不是手把手教你系统的知识。
 3.  顾问只能指出方向，而不会具体进行操作，不会帮你完成工作或者作业，不保证解决所有问题。这类似于研究生导师，或者技术带头人提供的指导，并不包括具体解决问题。有了方向，具体的学习肯定是你自己完成。
 4.  顾问是私密提供指点，是实质性的，不允许利用名声。比如在网站上说本公司顾问是王垠之类的，如果发现会追究法律责任。总的原则是，你不公开提我的名字，我也不公开提你的名字，以完全消除对名声的利用。
 5.  咨询过程中的具体内容属于隐私，受法律保护，请不要在网络上公开。但为了服务大众的需要，我有权公开某些典型技术问题及其答案。当然，会隐去提问者的名字，隐私信息和商业机密。
-6.  如果发现尊重和礼貌问题，我有权随时终止顾问服务，并按比例退回余款。
+6.  如果发现尊重和礼貌问题，我有权随时终止顾问业务，并按比例退回余款。
 
 这些设计会随着经验的加深不断改进。我相信通过我的指点，好的思想会逐渐影响到越来越多的人。
