--- a/blog/2020-03-05-zsxq.markdown
+++ b/blog/2020-03-05-zsxq.markdown
@@ -1,44 +1,28 @@
-## 知识星球试运行
+## 知识星球试运营
 
-今天又玩了一会知识星球的手机 app，发现虽然它的网页版不大流畅，其实手机版做得还不错。我基本可以把它看作是一个付费版的微博。经过一番考虑，我还是决定开始试运行知识星球。我把它作为我传播知识和洞察力的 4 个层次之一：
+经过很长一段时间的考虑之后，我终于决定采用一种知识付费平台。一方面，它能让我的付出有一定的回报。另一方面，它可以作为一道门槛，防止有价值的内容被盗取和利用。它也许还可以帮助我建立一个风格良好的，独立于业界浮夸和喧嚣之外的社区。
 
-1.  聊天（slack，riot）
-2.  知识管理（博客，微博，知识星球）
-3.  顾问
-4.  课程
+我选择的平台是知识星球，因为我发现它有足够的交互性，而且可以保留我的独立风格，不需要做一些浮夸的宣传。如果你已经长期关注和阅读我的博客，认同我的价值观和想法，那你可以考虑加入。
 
-聊天室是交流的地方，你可以在那里获取知识，可是容易丢失信息。很多时候同一个问题刚讲了不久，又来一个新手问同样的问题。如果这样多几次，知道的人可能都不出声了。只有同样不大明白的人会跟你讨论，因为他们也想知道自己理解的对不对。
+知识星球不会代替博客，它只是提供一种交互的交流方式。该发在博客的内容，仍然会在这里出现。请不要觉得有压力加入知识星球。
 
-你会发现我们在上面聊的内容深入到了计算机科学最迷惑人的一些主题：类型系统，union type，停机问题，异步编程的本质…… 这不是一般初学者看了就能明白的事情。有一些觉得初级的问题，大家都不会在上面聊。通过讨论，我和讨论的人都学会了东西。其他人可能也学到一些，但并不是都能看懂。就跟你吃饭听别人聊天，有时候一不注意，有价值的话就溜走了。
+### 加入说明（请仔细阅读）
 
-课程是最快，最系统掌握知识和思维方式的手段。但课程需要双方有比较大的付出：金钱和时间。我需要花时间来准备课程，需要安排每个人的时间，需要在固定的时间讲课。有的人成天加班，可能没时间来听讲。各种问题都限制了可以参与其中的人数。所以虽然课程是非常重要的，我却仍然缺少一个环节。
+我希望建立一个互相尊重的高品质社区。要加入这里，请确保你是属于这里的人。星球的风格是踏实求是的，不欢迎在其它地方装腔作势，收智商税者加入。
 
-我觉得知识星球这类平台，可以帮我连接这两者。付费使我的付出有所回报，我会更有动力分享宝贵的经验。它帮我连接到粉丝们，帮助他们获得跟我互动的机会。帮助他们简单的问题得到指点。很多时候人们对我的期望其实不高，他们需要知道，这本书到底好不好，还有什么其它推荐。一个技术，到底是不是传说中的那么神奇，有什么他看不见的瑕疵和坑。一个热门投资领域，到底是不是值得投入时间或者金钱…… 所有这些其实都可以得到很简单的回答，不需要上课，不需要很专业的对话软件。
+对于后期发现不是想求知，而是利用星球资源在其它地方装腔作势，制造虚假威望，收别人智商税的人，将毫不留情的移除。移除成员时平台不会退手续费，请加入时慎重考虑。
 
-我中断过好几次微博的使用，因为微博是一个开放的系统。只要打开评论，必然有心理丑陋的人，说一些让人不舒服的话。不管是我自己还是粉丝们，都对这些网络流氓深恶痛绝。所以后来在用微博，我就一直关闭了评论，为我自己，也为粉丝们。
+加入星球的费用是一年 2400 元。请大家注意用微信支付，不要用“星球币”，否则会被扣高额的“苹果税”（32 %）。知识星球会收取 20 % 的手续费，但用微信付款可以不用付苹果税。
 
-可是关闭评论之后就失去了有效的互动，失去了信息的互通，我不再能听到尊重我的人们友好的话语。我不再知道有多少人支持我，关心我。每次发博，我总是觉得我在对着空气说话。我不知道是什么样的人在看我的微博，是朋友还是敌人，还是网络上的一只狗。看着几十几百的转发数，我不知道他们是说我好还是坏，我都不敢点开。我装作不在乎，我不知道他们是谁，但我总是感觉其中有一些人在黑我。
+加入星球需要一个申请过程。申请界面的字数很有限，但可以抓图放进去。内容请写明：
 
-这就是微博最严重的问题，谁都可以 follow 你，但他却可以是你的敌人，嘲笑你，鄙视你的人。一个人需要多大的勇气，才敢在这种公开平台发表言论。不管你说什么，总有人胡说一些风凉话。
+1.  你的真名
+2.  所在学校或公司
+3.  自我介绍，说明加入的动机
+4.  完整的学生证照片，工牌照片，或身份证照片
+5.  声明“我保证不将星球资源用作非学习目的”
+6.  你的联系 email——如需补充信息，我可能通知你
 
-但我仍然喜欢微博，它有一个不错的界面，是中文网络里用得最多的平台。一条条的微博，比起聊天来说更加直观，一目了然。我可以把自己的思想发送到很多人的面前，告诉他们不是孤独的，告诉他们世界上有更容易的办法来理解一些事情，告诉他们世界上还存在更幸福的生活方式……
-
-这就是为什么我觉得应该有一个门槛，它可以阻止这些莫名其妙，不知哪里来的人。真的尊重我的人，会愿意花钱来关注我，甚至花钱来问我问题，会愿意在经济上支持我。这就自然的阻隔了不必要的噪音，让我的内心得到安宁。让我知道看我发出的信息的人，他们会善待我告诉他们的东西，不会嘲笑讽刺我。而且他们会从中获益。
-
-我会继续在微博发布有“社会价值”的内容，但会停止在微博发布有“个人价值”的内容。“个人价值”的意思是，可以直接让个人获利的内容，比如那些你知道了就能改善工作和学习的内容。转向知识星球。我希望有个人价值的内容只被支持我，尊重我的人看到。我的付出让为此获益的个人付出少量的回报，我觉得是合情合理的。
-
-这次有粉丝发 email 给我，说看到你发布的教育计划，我看到微博转发的那些评论，好心寒。现在一想，我为什么之前发那么多宝贵的内容在微博上，帮助那些嘲笑我的人吗？我可能是傻子吧 :)
-
-当然，这个博客上的内容还是会更新。
-
-我在知识星球的第一件事，应该是为初学计算机的人推荐一条正确的道路，避免他们走弯路，误入歧途。给他们推荐各种好的资源，比较系统的回答和整理他们的提问。由于知识星球针对各种水平的粉丝，所以我不会只发高端内容，会更照顾初学者。
-
-我决定启动我的知识星球，收费是一年 2000 元。我打算每天都写点东西进去。价格可能会随着有价值内容的沉淀逐渐增加。知识星球会收取 20% 的手续费，但用微信付款不存在苹果税。请大家用微信，不要用“星球币”支付。
-
-为了避免误解和错误的期望，**请特别注意：知识星球不再是用来支持免费课程的工具，免费的课程已经不存在了。**详情请参考我的[这篇文章](http://www.yinwang.org/blog-cn/2020/03/04/changes)。
-
-你如果理解了所有这些，现在可以扫码加入。加入时有一个简单的批准过程，用于阻止不合适的人。在那个地方请输入你的真名，所在的学校或公司，并且写明「**我理解知识星球与课程无关**」。不然请求可能会被忽略。
-
-按要求申请的人一般都会在一天之内通过审批，除非有值得怀疑的特例。如果一天之内还没有通过审批，可以给我发 email，比较详细的介绍自己，包括真名，所在学校或公司，加入的动机，简历等。
+符合要求的申请一般会在一天之内通过审批。如果一天之内还没通过，可以给我发 email 询问。
 
 ![](http://www.yinwang.org/images/zsxq.jpg)
