Add 2 posts and update 3 posts.

--- a/blog/2020-01-17-advising.markdown
+++ b/blog/2020-01-17-advising.markdown
@@ -23,10 +23,9 @@
 
 ### 申请方法
 
-1.  首先，发送 [email](mailto:yinwang.advising@gmail.com?subject=申请顾问业务&body=王垠先生：%0A1\. 简单自我介绍。教育经历，工作单位，工作内容，职级等。)。
+1.  首先，发送 [email](mailto:yinwang.advising@icloud.com?subject=申请顾问业务&body=1\. 简单自我介绍。教育经历，工作单位，工作内容，职级等。)。
 2.  标题：申请顾问业务。
-3.  称呼：王垠先生。
-4.  简单自我介绍。教育经历，工作单位，工作内容，职级等。
+3.  简单自我介绍。教育经历，工作单位，工作内容，职级等。
 
 ### 注意事项
 
