Update one post and add two new posts.

--- a/blog/wp-2020-12-09-人和机器的区别.markdown
+++ b/blog/wp-2020-12-09-人和机器的区别.markdown
@@ -2,6 +2,8 @@
 
 <span>很简单的</span>日常<span>原理，</span>一个小容器里的东西不先倒出来<span>，</span>怎么放其它东西进去呢<span>？里面的人不先出来，外面的人怎么进去呢？本来没几个人，难道会没位置吗？一定要抢。先下后上，这都不算是礼貌，而是必然的顺序。可是这么简单的道理，似乎没人理解一样。人们为了所谓</span><span>“</span><span>生存</span><span>”</span><span>而忙碌，已经到了失去基本思维的地步。仿佛许多没有</span>智能的<span>机器，按照自己的轨道在飞速地运转。</span>
 
+<span>![](https://yinwang1.files.wordpress.com/2020/12/img_5228.jpg?w=225&h=300)</span>
+
 <span>在地铁站和公交车门口，因为画了线写了标语，最后人们知道了要</span><span>“</span><span>先下后上</span><span>”</span><span>。电梯也是一辆车，理应知道是一样的规则。然而对于电梯却一直是另外一种态度，就因为电梯门口没有画线写标语</span><span>……</span>
 
 <span>其他的所谓</span><span>“</span><span>教育</span><span>”</span><span>都不要说了，我觉得一个人从小应该首先受到的教育是：</span><span>“</span><span>意识到其他人的存在</span><span>”</span><span>，因为这是人和机器的重要区别。</span>
