Update one post and add one post about music.

--- a/blog/wp-2021-01-12-日本，一个超越老师的学生.markdown
+++ b/blog/wp-2021-01-12-日本，一个超越老师的学生.markdown
@@ -1,8 +1,10 @@
-这几个月探索的几个新领域，本来以前都是欧洲人的专长，最后却都发现世界上最好的此类产品已经逐渐被日本的取代。画画用的铅笔，曾经以为是欧洲的最好。买了好多种，结果最后发现三菱等日本品牌的铅笔已经超越了欧洲品牌。某些德国名牌铅笔，现在居然也都是「Made in Japan」了。
+这几个月探索的几个新领域，本来以前都是欧洲人的专长，最后却都发现世界上最好的此类产品已经逐渐被日本的取代。画画用的铅笔，曾经以为是欧洲的最好。买了好多种，结果最后发现三菱等日本品牌的铅笔已经超越了欧洲品牌。某些德国牌子的铅笔，现在居然也都是「Made in Japan」了。
 
 最近开始研究音乐，才发现正在发生一场音乐的革命，越来越多的乐器在被“虚拟化”，“软件化”。在这个大潮中，钢琴当然是争相想做好的目标。不止一个的欧洲公司试图制作效果很逼真的“虚拟钢琴”，而他们如此大费周章录音采样的原型，居然是 Yamaha 钢琴，而不是什么古老的欧洲牌子。Yamaha CFX 钢琴被世界上最好的一些音乐家，音频工程师们放在了 Pablo Casals 和 Beatles 等传奇人物使用过的录音室里，用最好的麦克风进行精密采样，试图制作出很高品质的虚拟钢琴。
 
-“当你已经爱上一台乐器，就很难找到另一台这么好的”，“命运让我们相遇了”，看到负责这个项目的德国音乐家如此表达对 Yamaha 钢琴的热爱，还挺有感触。还看到一个评论说，德彪西的“月光”（Clair de lune）用 Yamaha CFX 弹出来，产生了史无前例的效果。怎么以前没感觉 Yamaha 可以有这么好？算我又孤陋寡闻，刮目相看了一次吧。我当然无意为 Yamaha 打广告，我也没资格打广告，其中的某些话可能也会有点编造的成分，只是我觉得没有任何其它国家能在这么多传统领域让欧洲人如此尊重的。
+“当你已经爱上一台乐器，就很难找到另一台这么好的”，“命运让我们相遇了”，看到负责这个项目的德国音乐家如此表达对 Yamaha 钢琴的热爱，挺有感触的。还看到一个评论说，德彪西的“月光”（Clair de lune）用 Yamaha CFX 弹出来，产生了史无前例的效果。怎么以前没感觉 Yamaha 可以有这么好？算我又孤陋寡闻，刮目相看了一次吧。我当然无意为 Yamaha 打广告，我也没资格打广告，其中某些说法可能也会有点”演”的成分，但关键是，没有任何其它国家能在这么多传统领域让欧洲人如此尊重的。
+
+日本还出产很好的水彩颜料，吉他…… 而这些本来都是欧洲人的特长。
 
 如果世界是一个学校，日本恐怕就是里面最顶尖的学生，不但学到了真东西，而且超过了老师。几百年前日本就超越了自己的第一个老师——中国。到现在，我们中国人在做什么呢？
 
