Add a post about music, almost as the same as the Bach and Mozart one.

--- a/blog/wp-2021-01-19-music.markdown
+++ b/blog/wp-2021-01-19-music.markdown
@@ -10,7 +10,9 @@
 
 无聊的古典音乐是什么样的呢？一个最显著的，无聊的古典音乐的例子，就是莫扎特的音乐了。虽然大家都把莫扎特膜拜为天才，可是今天有任何地方会播放或演奏莫扎特的音乐吗？几乎没有地方会播放莫扎特的音乐，连最高雅的音乐厅都很少演奏莫扎特的音乐。可是他仍然被叫做天才。
 
-像很多外行一样，我以为自己是不理解才不喜欢，所以我强迫自己听过莫扎特的音乐。天天听，也听了好久。可是最后，我几乎不记得他的任何曲目，因为全都听起来差不多的，像是有模版做出来的一样，就是可以如此无聊。听了肖邦的钢琴曲，再回去听莫扎特的钢琴奏鸣曲，几分钟就无聊得不行了。这叫音乐吗？
+像很多外行一样，我以为自己是不理解才不喜欢，所以我强迫自己听过莫扎特的音乐。天天听，也听了好久。可是最后，我几乎不记得他的任何曲目，因为全都听起来差不多的，像是有模版做出来的一样，就是可以如此无聊。
+
+肖邦写了 20 首夜曲，每一首听起来都不一样，很有特色，听到很容易就能区分开。莫扎特也写了很多钢琴曲，可是听了很多遍仍然不知道哪首是哪首。听了肖邦的再回去听莫扎特的，几分钟就无聊得不行了。没有很难听的音，也没有什么错误，可就是特别无聊，仿佛看到一群没头脑的人在傻乎乎的跳舞。节奏特别欢快，千篇一律的欢快，欢快得让人感觉是假的。
 
 我也喜欢过莫扎特的少数音乐。有次一个法国钢琴家来上海，演奏了莫扎特第 20 号钢琴协奏曲，我觉得挺好听。后来回家查它的资料，说第 20 号钢琴协奏曲比较特别，它非常不像莫扎特本来的风格，被评价为“最像贝多芬的莫扎特音乐”，也是贝多芬唯一喜欢的莫扎特音乐……
 
@@ -22,6 +24,8 @@
 
 莫扎特：1756-1791
 
-巴赫死后六年，莫扎特才出生。有人说莫扎特后期受了巴赫的影响，但我发现他们是有天壤之别的。说莫扎特受了巴赫的影响，不如说某些现代摇滚乐队受巴赫的影响更多一些，所以他们更加有趣。我曾经喜欢听一个金属摇滚乐队叫 Dream Theater，他们的音乐里隐约看见巴赫的影子。在那段时间，巴赫被我戏称为“现代摇滚乐之父”。但很显然，巴赫还是更耐听一些。直到三百年后的今天，巴赫的音乐仍然是难以超越的，灵感的来源。
+巴赫死后六年，莫扎特才出生。有人说莫扎特后期受了巴赫的影响，但我发现他们是有天壤之别的。说莫扎特受了巴赫的影响，不如说某些现代摇滚乐队受巴赫的影响更多一些，所以他们更加有趣。我曾经喜欢听一个金属摇滚乐队叫 Dream Theater，他们的音乐里隐约看见巴赫的影子。在那段时间，巴赫被我戏称为“现代摇滚乐之父”，但很显然，巴赫还是更耐听一些。直到三百年后的今天，巴赫的音乐仍然是难以超越的，灵感的来源。
+
+无聊的也许不止是莫扎特。在网上搜索“mozart music boring”，你会发现很多人有同感。我看到有几个人说，跟莫扎特同时代的很多作曲家都差不多。一个庞大的乐队演奏的交响曲，却能让现场观众睡着，可能就是这些人的作品了。
 
 对于音乐，人们应该相信自己的直觉。如果多次听仍然觉得很无聊，很可能它就真的是无聊的。如果你因为听了莫扎特等人的音乐就觉得古典音乐很无聊，请明白这个道理：古典音乐和古典音乐是不一样的。
