--- a/blog/wp-2021-06-23-eq.markdown
+++ b/blog/wp-2021-06-23-eq.markdown
@@ -14,13 +14,15 @@
 
 被动的情商标准，只关心“别人是否接纳自己”，而一个平衡的情商标准，应该包括“正确判断其他人是否值得自己喜欢或信任”才对。所以国人所谓的情商，把自己放在了一种被动的地位，这使得在乎这个标准的人完全被其他人操纵。他们不再是自己，他们只在乎别人如何看待自己。
 
-按照中国的情商标准，如果你想“情商高”，那么你就得让其他人认可你，喜欢你，奉承你…… 说白了，你就得演戏。总之，这跟你如何认识和鉴别其它人（你 –> 别人）无关。中国的情商标准，并不包括识破别人的谎言，判断别人的诚实或友好程度，感觉人的素质，探测虚情假意，察觉伪君子，等等。仔细想想，这些“主动”的能力，才应该是情商的主要内容，才能把情商和智商相提并论。因为智商的标准不管如何荒唐，它仍然是主动的：人 –> 世界。
+按照中国的情商标准，如果你想“情商高”，那么你就得让其他人认可你，喜欢你，奉承你…… 说白了，你就得演戏。总之，这跟你如何认识和鉴别其它人（你 –> 别人）无关。中国的情商标准，并不包括识破别人的谎言，判断别人的诚实或友好程度，感知人的素质，探测虚情假意，察觉伪君子，等等。仔细想想，这些“主动”的能力，才应该是情商的主要内容，才能把情商和智商相提并论。因为智商的标准不管如何荒唐，它仍然是主动的：人 –> 世界。
 
 如果按照主动的情商标准，中国现在绝大部分人都是情商极低的。很明显的一些油嘴滑舌的骗子，现在可以在媒体上随便忽悠。仅从语气或者用词我就无法听下去的内容，却有很多人不但听了，而且接受照办。一看标题就是误导的文章，很多人当成真理一样转发。二十年前我就认定了是骗子的一些人，现在却可以有上千万粉丝，继续招摇撞骗，趁着这个“AI 和区块链时代”大捞一笔横财。最糟糕的是，模仿他们的人大有人在。演技如此之差，却仍然有人看。
 
 油腔滑调现在成为了聪明，情商高的象征。有天我在一个饭店吃饭，旁边的小孩拿着手机，在看一个作文课的视频。因为坐得太近，我听到了好些内容。那老师的语气真是典型的油滑，一听就已经意境全无，根本不像是能教文学的人。从小听这样的人讲课，会写出什么样的文章呢？
 
 从直觉上感觉出油腔滑调不真诚，应该算是基本的情商，可惜大部分国人是无法达到这一点的。这种语气在国外的世界，恐怕是很难被大部分人接受的，在中国却可以很流行。当然我不是说语气真诚就可以过关，但至少别人得演成那样子吧？在中国呢，根本不需要演，直接油腔滑调都有很多人接受。
+
+中国传统文化一直把社会当成一个勾心斗角的战场，随时都在演出《三国演义》，算计别人。人之间极度缺乏信任，包括亲戚朋友，甚至亲兄弟姐妹。以前有一个朋友，后来他告诉我，他要提高情商，就去看《三国演义》。多年以后，我发现他已经不是朋友了。他做的一切事情都是在演戏，成了一个不可信任的人。情商这么高的人，怎么这么容易就被我识破了呢？因为演技也太差了点。但他仍然混得很好，骗倒了不少人。
 
 情商稍高一点的人，应该能够识别“鸡汤”。很典型的一种鸡汤，就是反复告诫人们要诚实，做好人，这样别人就会以为他自己是个好人。这种骗术可以骗倒大部分中国人，甚至骗倒一部分外国人。加州的 IT 公司总是说“改变世界”，Make the world a better place，很多人也真信了，所以加州人的情商也没高到哪里去。另外，我发现美国人的情商普遍低于欧洲人，因为他们连“美国梦”都信了。
 
