--- a/blog/wp-2021-07-24-apollo.markdown
+++ b/blog/wp-2021-07-24-apollo.markdown
@@ -22,6 +22,10 @@
 
 你不需要很高的情商，就应该能发现这些问题。几乎所有这视频的观众都发现了这些问题，写了一些幽默的评论。有人说：“语言可以撒谎，但身体不会。” 还有人说：“我在等着现场有人站起来说，你们没去过，对吧？” 很有意思。
 
+当然，你总可以给这一切找到借口，比如这些宇航员回地球的时候差点就没命了，所以新闻发布会才那么紧张，不敢随便说话。我提醒大家仔细思考所有的细节，人的很多表现是不可能因为经历过险情改变的。大难不死，人反而可以更加谈笑风生，更何况是非常勇敢的飞行员。对于技术术语，也不可能因为死里逃生而改变熟悉程度，反而也许会增加。最后你也许会发现，这些借口都无法解释他们的诡异表现。
+
+对于每一个疑点，总有人能为它找到借口，所有这些借口加在一起，成为一个非常复杂和扭曲的理论。其实有一个非常简单的理论可以解释这一切，那就是美国人从来没去过月球。如果一件事是真的，当事人肯定能拿出压倒性的证据来，然而这么多年过去了，我们没有看到任何美国成功登月的确凿证据。
+
 阿波罗登月是一个骗局。很长时间都听说这是假的，一直没能确信，把它叫做“阴谋论”，但今天看了这新闻发布会，我已经没有多大疑问了。很多人听说这类“骗局”，总是有疑问：“我怎么知道其它人说的是真的呢？” 但我的结论不是来自别人的证据，而是 NASA 自己的新闻发布会，和我自己的眼睛和头脑。
 
 我觉得这种[文章](https://www.aulis.com/high_moon.htm)应该被翻译成中文，让每个中国人都看明白美国的真面目，不要再被蒙蔽了。
