--- a/blog/wp-2021-07-24-apollo.markdown
+++ b/blog/wp-2021-07-24-apollo.markdown
@@ -1,31 +1,31 @@
-推荐一篇美国人自己写的关于阿波罗登月的文章《[How High the Moon? or the Greatest Deception of Them All](https://www.aulis.com/high_moon.htm)》。作者 Emanuel E. Garcia, MD 是一个心理医生和心理分析师，不过这篇文章不依赖专业知识，任何人都能明白。
+推荐一篇美国人自己写的关于阿波罗登月的文章《[How High the Moon? or the Greatest Deception of Them All](https://www.aulis.com/high_moon.htm)》。作者 Emanuel E. Garcia, MD 是一个心理医生和心理分析师，不过这篇文章不依赖心理学专业知识，任何人都能明白。
 
 借鉴这篇文章的一些思路，我自己的理解如下。
 
 阿波罗计划之后，NASA 再也没有上过月球。技术发展了，经济发展了，自称发射过那么多宇宙探测器，去过水星，火星这么远的地方。月球比火星近这么多，却再也不去了。能去月球，却没能力送宇航员去国际空间站（ISS），长期花重金搭乘俄罗斯的 Soyuz 飞船。
 
-当你质疑这些，就有人随便编故事了，比如说“当年的登月技术后来被毁掉了”。简单的生活经验说明，这些都是借口。我可以随便说我有什么超级技术，等你问我“那为什么现在没了？” 我就说“我把它毁了！” 简直是万能的借口。我不明白怎么会有人相信这种说法。最可能的情况是，他们根本就没有去过月球。
+当你质疑这些，就有人随便编故事了，比如说“当年的登月技术后来被毁掉了”。简单的生活经验说明，这些都是借口。我也可以随便说我有什么超级技术，等你问我“那为什么现在没了，拿出来看看呢？” 我就说“我把它毁了！” 简直是万能的借口，我不明白怎么会有人相信这种说法。所以我觉得最可能的情况是，他们根本就没有去过月球。
 
 阿波罗计划所有的照片和影片，月球背景的天空一片漆黑，完全看不到星光。这不像是没有大气层的地方应该看到的景色，而像是一个摄影棚。关于这个，可以搜索纪录片，所有的纪录片，包括最近发布的那些，都是一样的情况。
 
 很有意思的是，在最新发布的阿波罗登月纪录片里，你会在下面看到评论说：“地平说者（FlatEarther）终于可以闭嘴了！” 说得好像这纪录片提供了很多新的证据似的，而其实没有。思考，他们为什么总是提到“地平说”？如果想不出来，可以看[这里](https://yinwang1.wordpress.com/2021/07/21/advanced-psychop/)。
 
-但对我的理解有决定性意义的，是 NASA 官方的阿波罗 11 号新闻发布会录像。你可以搜索“Apollo 11 Press Conference”找到这个视频，它会让你惊讶。
+但对我的理解有决定性意义的，是 NASA 官方的阿波罗 11 号新闻发布会录像。你可以搜索“Apollo 11 Press Conference”找到这个视频，它会让你惊讶。阿波罗 11 号刚回到地球，可是新闻发布会上，三个宇航员不像是刚刚完成人类历史上最伟大的计划，经历过“一览众山小”的景象，而像是被审讯的犯人。语言，表情，神态，思维反应速度，完全不像是经历过这一壮举的人。
 
-阿波罗 11 号刚回到地球，可是新闻发布会上，三个宇航员不像是刚刚完成人类历史上最伟大的计划，经历过“一览众山小”的景象，而像是被审讯的犯人。语言，表情，神态，思维反应速度，完全不像是经历过这一壮举的人。
+用常理想一想，如果你去过一个罕见的地方旅游，当你谈起那个地方，应该有很多可以说的。你的语言应该完全不需要组织，自然就说出来了，你的眼睛会放光！如果你是和朋友一起去的，经过一番同甘共苦，你们应该显示出融洽的关系，而且你们应该都知道发生的故事。然而这三个宇航员似乎无话可说，极其焦虑。他们之间似乎没有共同经历，以至于面面相觑，怕对不上口供似的。当被问到月球上的景色，他们吞吞吐吐地回答：“不记得看到什么星星……” 像是被考到了一样。
 
-用常理想一想，如果你去过一个罕见的地方旅游，当你谈起那个地方，应该有很多可以说的。你的语言应该完全不需要组织，自然就说出来了，而且你的眼睛会放光！如果你是和朋友一起去的，经过一番同甘共苦，你们应该显示出融洽的关系，而且你们应该都知道发生的故事。然而这三个宇航员似乎无话可说，极其焦虑。他们之间似乎没有共同经历，以至于面面相觑，怕“对不上口供”似的。当被问到月球上的景色，他们吞吞吐吐地回答：“不记得看到什么星星……” 像是被考到了一样。
-
-我们儿时的英雄，传说第一个踏上月球表面的人类，阿姆斯特朗（Armstrong）也是如此。神情紧张，目光呆滞，吞吞吐吐，像是在艰苦地背别人给他们的台词。中间经常有专业术语卡顿的情况，比如器械或操作流程的名字。宇航员需要精确操作高科技的设备，在外太空要是有东西坏了只有靠自己修。这可是关系到自己性命的事情，不应该对这些名词不熟悉。其它两人也特别紧张，眉头紧锁，眼神诡异，像是在互相递眼色，你可不要背错了台词啊！
+我们儿时的英雄，传说迈出“人类一大步”，第一个踏上月球的人，阿姆斯特朗（Armstrong）也是如此。神情紧张，目光呆滞，吞吞吐吐，像是在艰苦地背别人给他们的台词。中间经常有专业术语卡顿的情况，比如器械或操作流程的名字。宇航员需要精确操作高科技的设备，在外太空要是有东西坏了，只有靠自己修。这可是关系到自己性命的事情，不应该对这些名词不熟悉。其它两人也特别紧张，眉头紧锁，眼神诡异，像是在互相递眼色，你可不要背错了台词，让我接不下去啊！
 
 任何一个合格的飞行员都不可能表现如此呆滞，毫无自信可言。飞行员的工作要求很高的心理素质，身体素质和反应速度。你坐飞机，偶尔也看到过机长是什么神情，说话是什么语气吧，你见过军人吧？他们的眼睛应该像鹰一样有神，气势应该让人感觉无所畏惧，一切尽在掌控才对。更何况这三人是坐过火箭，上过月球的。宇宙飞行速度非常快，难度很高，需要很大的胆识，顶尖的飞行员才会被选来做宇航员。在新闻发布会上至少应该神情自若，谈笑风生，可是从他们的表现看来，很可能不是宇航员，而且应该也没有能力驾驶飞机，而像是拙劣的演员，甚至像是偷鸡摸狗的小偷或骗子。
 
-你不需要很高的情商，就应该能发现这些问题。几乎所有这视频的观众都发现了这些问题，写了一些幽默的评论。有人说：“语言可以撒谎，但身体不会。” 还有人说：“我在等着现场有人站起来说，你们没去过，对吧？” 很有意思。
+你不需要很高的情商就应该能发现这些问题。几乎所有这视频的观众都发现了这些问题，写了一些幽默的评论。有人说：“语言可以撒谎，但身体不会。” 还有人说：“我在等着现场有人站起来说，你们没去过，对吧？” 很有意思。
 
-当然，你总可以给这一切找到借口，比如这些宇航员回地球的时候差点就没命了，所以新闻发布会才那么紧张，不敢随便说话。我提醒大家仔细思考所有的细节，人的很多表现是不可能因为经历过险情改变的。大难不死，人反而可以更加谈笑风生，更何况是非常勇敢的飞行员。对于技术术语，也不可能因为死里逃生而改变熟悉程度，反而也许会增加。最后你也许会发现，这些借口都无法解释他们的诡异表现。
+当然，你总可以给这一切找到借口，比如这些宇航员回地球的时候差点就没命了，所以新闻发布会才那么紧张，不敢随便说话。我提醒大家，仔细思考所有的细节，人的很多表现是不可能因为经历过险情改变的。大难不死，人反而可以更加谈笑风生。不要忘了，这些人应该是世界上最勇敢的飞行员。对于技术术语，也不可能因为死里逃生而改变熟悉程度，反而也许会增加。最后你也许会发现，这些借口都无法解释他们的诡异表现。
 
 对于每一个疑点，总有人能为它找到借口，所有这些借口加在一起，成为一个非常复杂和扭曲的理论。其实有一个非常简单的理论可以解释这一切，那就是美国人从来没去过月球。如果一件事是真的，当事人肯定能拿出压倒性的证据来，然而这么多年过去了，我们没有看到任何美国成功登月的确凿证据。
 
 阿波罗登月是一个骗局。很长时间都听说这是假的，一直没能确信，把它叫做“阴谋论”，但今天看了这新闻发布会，我已经没有多大疑问了。很多人听说这类“骗局”，总是有疑问：“我怎么知道其它人说的是真的呢？” 但我的结论不是来自别人的证据，而是 NASA 自己的新闻发布会，和我自己的眼睛和头脑。
 
 我觉得这种[文章](https://www.aulis.com/high_moon.htm)应该被翻译成中文，让每个中国人都看明白美国的真面目，不要再被蒙蔽了。
+
+希望大家今后多关心“阴谋论”，抱着去伪存真的态度去看它们，不要全盘忽略这些说法，因为里面可能包含着居心叵测者希望隐藏的重要线索。不要因为主流媒体把他们叫做“阴谋论者”，就全盘忽略他们的言论。他们其中许多人是真正的专家，为了让世界知道真相，他们牺牲了自己的名誉，工作和收入，甚至被抹黑和陷害。我们应该珍惜他们告诉大家的，同时保留自己的鉴别能力。
