Add/update the recent posts.

--- a/blog/wp-2021-09-11-911.markdown
+++ b/blog/wp-2021-09-11-911.markdown
@@ -6,11 +6,11 @@
 
 </div>
 
-很简单的常识就能说明问题：钢筋混凝土做成的建筑，是不会因为火灾而倒塌的，即使可以被撞垮或烧垮，也不会以自由落体姿态垂直下降，一直塌到底。任何建筑物塌到一定的地步，应该会被下面的材料挡住，下不去了。除非，它是被定向爆破的。
+这个纪录片长达 5 个多小时，汇集了各个领域专家们的分析。如果你没时间看，很简单的常识就能说明问题：钢筋混凝土做成的建筑，是不会因为火灾而倒塌的，即使可以被撞垮或烧垮，也不会以自由落体姿态垂直下降，一直塌到底。任何建筑物塌到一定的地步，应该会被下面的材料挡住，下不去了。除非，它是被定向爆破的。
 
-许多的现象都说明，这不是“恐怖袭击”，而是自导自演的定向爆破。爆破了自己的楼，诬陷别人，发动战争，导致数十万人死亡，几百万人沦为难民。这种为陷害他人而制造的假象，就叫做“false flag”。
+许多的现象都说明，这不是什么“恐怖袭击”，而是自导自演的定向爆破。爆破了自己的楼，诬陷别人，发动战争，导致数十万人死亡，几百万人沦为难民。这种为陷害他人而制造的假象，就叫做“false flag”。
 
-不知道还要牺牲多少人，人们才会明白美国是什么——人类历史上最邪恶，阴险，伪善的国家。其骗术水平超越了历史上任何一个国家，超越了中国的三国时代。美国的阴谋家们不断地上演各种戏，以此为借口发动战争，或者挑起其它国家内乱，却能让绝大部分人以为他们是正义的，就是可以如此高明。如果大部分人不能识破这种把戏，人类的前途非常堪忧。
+不知道还要牺牲多少人，人们才会明白美国是什么——人类历史上最邪恶，阴险，伪善的国家。其骗术水平超越了历史上任何一个国家，超越了中国的三国时代。美国的阴谋家们不断地上演各种戏，以此为借口发动战争，或者挑起其它国家内乱，却能让绝大部分人以为他们是正义的，就是可以如此高明。如果大部分人不能识破这种把戏，任其肆虐，我觉得人类的前途相当堪忧。
 
 很多年前看了这个纪录片，我觉得分析很深入，符合科学原理。现在再看 9.11 当时的新闻报道，总觉得播音员的语气像是在解说球赛。面对如此让人震惊，史无前例的事件，他们说“Oh my god”的语气却像是在演肥皂剧，因为他们早就知道这是怎么回事。有些戏，当你还蒙在鼓里的时候，怎么看它都是真的。当你突破迷雾之后，才发现破绽百出，如此的明显。
 
