Add a new post about test and update the new year post.

--- a/blog/wp-2022-01-01-2022-new-year.markdown
+++ b/blog/wp-2022-01-01-2022-new-year.markdown
@@ -4,7 +4,7 @@
 
 随之而来的是（很可能由药物引起的）耳鸣/脑鸣症状。开头是耳朵里开始尖锐的鸣响。过了一阵没好，去看了耳鼻喉科（西医）。还挂的是某三甲医院的专家号，那医生一听到“耳鸣”两个字就说：“哎呀，耳鸣不好治啊！” 急急忙忙开了药就把我打发走了。我又迟疑了几天要不要吃这药，结果还是吃了。它的效果只是让这耳朵里的声音变成了脑子里的“虫子交响曲”。早晚都在鸣，起起伏伏，一唱一和的。一直不好，就这样持续到现在。
 
-让人比较绝望的是，这耳鸣的病似乎处于医学的认知边沿，没人知道是怎么回事，没人真的知道怎么治它。各种方法我都试过，甚至包括用于治疗强迫症的心理疗法都用上了，都没治好。西医医生看了三个，中医医生现在也是第三个了，到现在才似乎有所改善。现在这位医生（中医）挺负责的，他告诉我第一副药方里放了 30g 之多的柴胡和其它几个有问题的成分，而且那个西药也很可能有问题。
+让人比较绝望的是，这耳鸣的病似乎处于医学的认知边沿，没人知道是怎么回事，没人真的知道怎么治它。各种方法我都试过，瑜伽，冥想，号称可以治耳鸣的呼吸法，甚至包括用于治疗强迫症的心理疗法都用上了，都没治好。西医医生看了三个，中医医生现在也是第三个了，到现在才似乎有所改善。现在这位医生（中医）挺负责的，他告诉我第一副药方里放了 30g 之多的柴胡和其它几个有问题的成分，而且那个西药也很可能有问题。
 
 说到头来，这一切都不是病，而是祸。我最初只是有一些身体异常，自己本来就会好，只是需要一些时间。可是我却没有相信自己的身体。最终是一个医生和他开的药引起了这么严重的问题，接着又遇到一个庸医，开了一个副作用难以琢磨的药，才导致这几个月的煎熬。如果给我一次重来的机会，我绝对不会相信那两个医生，不会吃他们的药。
 
