Add the recent post updates and 4 new posts.

--- a/blog/wp-2020-10-26-跑步道与自行车道.markdown
+++ b/blog/wp-2020-10-26-跑步道与自行车道.markdown
@@ -8,4 +8,4 @@
 
 同样是健身设施，中国的分了自行车道和跑步道，却仍然难以保护跑步者的安全和安宁。看来不管什么设计在中国，都得考虑到人的素质与先进国家不同。这不仅是设计的问题，而且是文化的问题。
 
-建议是什么呢？由于人的整体素质很难短时间提高起来，在中国就不要建什么自行车健身道了。不允许在这种地方骑车，就可以了。<iframe width="736" height="414" src="https://video.wordpress.com/embed/0SXZTiU6?hd=0&amp;autoPlay=0&amp;permalink=1&amp;loop=0&amp;preloadContent=metadata&amp;muted=0&amp;playsinline=0&amp;controls=1&amp;cover=1" frameborder="0" allowfullscreen=""></iframe>
+建议是什么呢？由于人的整体素质很难短时间提高起来，在中国就不要建什么自行车健身道了。不允许在这种地方骑车，就可以了。<iframe title="VideoPress Video Player" aria-label="VideoPress Video Player" width="736" height="414" src="https://video.wordpress.com/embed/0SXZTiU6?hd=0&amp;autoPlay=0&amp;permalink=1&amp;loop=0&amp;preloadContent=metadata&amp;muted=0&amp;playsinline=0&amp;controls=1&amp;cover=1" frameborder="0" allowfullscreen=""></iframe>
