Add the recent updates including new post.

--- a/blog/2022-02-22-myopia.markdown
+++ b/blog/2022-02-22-myopia.markdown
@@ -1,5 +1,7 @@
 ## 自然视力恢复法
 
+（由于主页从国内访问不方便，如需分享，可以下载[本文的 PDF 版](http://www.yinwang.org/pdf/myopia.pdf)。网页版生成的 PDF 排版不大好，建议下载专门拍版的 PDF。）
+
 防止和逆转近视是一个相当简单的事情，理解其中的原理只需要高中光学知识，具体操作方法只需要另外配一副眼镜，然而我也是最近才发现。
 
 ### 简短版
