--- a/blog/2025-04-27-past-year.markdown
+++ b/blog/2025-04-27-past-year.markdown
@@ -36,15 +36,15 @@
 
 ### 科学的精神
 
-时至今日，我应该已经可以说，我不再只是一个“计算机科学家”了。我是一个真正的科学家。我不但看透了计算机领域里最深刻的技术问题，而且通过同样的研究能力，不断地获取其它领域真正的信息。我恐怕是世界上**第一个**真正的科学家，如果你明白我之前说过的一些事情。现在所谓的“科学”，大部分都是假的，它只能算是一门宗教。
+时至今日，我应该已经可以说，我不再只是一个“计算机科学家”了。我是一个真正的科学家，去掉了限定词。我不但看透了计算机领域最深刻的技术问题，而且通过同样的研究能力，不断地获取其它领域的真正信息。我恐怕是世界上**第一个**真正的科学家，如果你明白我之前说过的一些事情。现在所谓的“科学”，大部分都是假的，它只能算是一门宗教。
 
-每一天我都研究着自己宝贵的身体，用最自然的方式，攻克着医生和医学家都难以根治的问题。我双眼的近视度数已经验光，确定降低了 75 度，证实了我对近视的研究的有效性。可能因为我年龄稍大，气血有点老化，所以仍然不能恢复至正常视力，但我觉得如果 20 岁以下的青少年理解了我提供的信息，这世界上应该不会再有近视的人。
+每一天我都在研究自己宝贵的身体，用最自然的方式攻克着医学（包括西医和中医）难以根治的问题。我双眼的近视度数已经验光，确定降低了 75 度，证实了我对近视的研究的有效性。可以说，**我是近视的真正起因的发现者**。可能因为我年龄稍大，眼球气血有点固化，所以仍然不能恢复至正常视力，但我觉得如果 20 岁以下的青少年理解了我提供的信息，这世界上应该不会再有近视的人。
 
-我研究出安全根治脚气的真正方法，不使用任何有毒副作用的药物。现在，通过一年的艰辛努力，我掌握了安全康复“肩周炎”或者“网球肩”的方法，不使用任何药物。
+我研究出安全根治脚气的真正方法，不使用任何有毒副作用的药物。现在，通过一年的艰辛努力，我掌握了安全康复“肩周炎”或者“网球肩”的方法，还是不使用任何药物。医学治疗疾病和创伤，总是让人们寄希望于外来的药物和设备，让人们越来越不相信自己身体的能力，让他们恐惧，产生对医疗的依赖性。而我相信自然的力量。是这种伟大的神秘力量创造了我的身体，它应该也会有能力修复它。
 
-最有意思的是，过去的一年，我不但康复了自己的肩膀，使它更加强壮，而且获得了新的“必杀技”——我的乒乓球技术达到了惊人的地步。经过深入的研究和分析，我理解了乒乓球旋转的物理规律，并且利用这些规律训练我的身体，实现了惊人的能力。可以说，在一些非常关键的乒乓球技术上，我已经超越了绝大部分的世界冠军。历史上只有一位世界顶尖选手能做到我能做的事情，而且他已经退役很多年。世界上有那么多的物理学家，乒乓球教练，为什么没有一个人传授我所发现的事情呢？因为这个世界上并没有真正的科学家存在，也没有过真正的教练。当今很多人崇拜的世界冠军们，在我眼里其实是基本技术不过关，漏洞百出，弱的不行。人们都难以想象，我眼里的世界真是很有意思。
+最有意思的是，过去的一年我不但康复了自己的肩膀，使它更加强壮，而且获得了新的“必杀技”——我的乒乓球技术达到了惊人的地步。经过深入的研究，实验和分析，我理解了乒乓球旋转的物理规律，并且利用这些规律训练我的身体，实现了惊人的能力。可以说在一些关键技术上，我已经超越了绝大部分的世界冠军。是真正的科学研究让我获得了这种能力，由此我也进一步地认识到人体的伟大。
 
-这样的真科学研究还在继续，但我不想分享太多。所以，我真的是一个科学家，去掉“计算机”这个限定词。我实现了儿时的理想。
+这样的真科学研究还在继续，几乎每天我都有新的想法和实验在进行，但我不想分享太多。所以我真的是一个科学家，去掉“计算机”这个限定词。我实现了儿时的理想。
 
 ### 有偿分享
 
